# natural_lang_processing

./: .gitignore  CMakeLists.txt  README.md  a.out  main.c
.circleci/: config.yml
my_lib/: common.c  common.h  cross_reference.c  cross_reference.h  id_list.c  lexical_analysis.c  lexical_analysis.h  output_objectfile.c  output_objectfile.h  syntatic_analysis.c  syntatic_analysis.h  token_list.c  token_list.h
